Fix box-textarea overflow

--- a/resources/assets/sass/modules/_components.scss
+++ b/resources/assets/sass/modules/_components.scss
@@ -32,4 +32,5 @@
   outline: none;
   overflow: auto;
   resize: none;
+  max-width: 100%;
 }
